--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.2",
+    "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
